--- a/_includes/nav-header.html
+++ b/_includes/nav-header.html
@@ -1,13 +1,79 @@
-{% if site.navigation_header %}
-<nav class="nav  nav--header">
-  <ul class="list list--nav">
-    {% for item in site.navigation_header %}
-      <li class="item  item--nav{% if item[1] == page.url %}  item--current{% endif %}">
-        <a href="{{ item[1] }}" title="Page - {{ item[0] }}">{{ item[0] }}</a>
+{% capture site_cats %}{% for cat in site.categories %}{{ cat | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+{% assign cats_list = site_cats | split:',' | sort %}
+
+<div class="header-menu header-menu-top">
+    <ul class="header-item-container">
+      <li class="header-item-title header-toggle "><a href="#menu"><h2><i class="fa fa-bars"></i></h2></a></li>
+      <li class="header-item-title">
+        <a href="{{site.url}}/">
+          {% if site.logo %}
+            <img class="logo" src="{{site.url}}/{{ site.logo }}" alt="{{ site.title }}">
+          {% endif %}
+          <a href="{{site.url}}/" class="title"> {{ site.title }}</a>
+        </a>
       </li>
+      {% for menu in site.menu reversed %}
+        {% assign class = nil %}
+        {% if ((page.url contains menu.url and menu.url != '/') or (page.url == '/index.html' and menu.url == '/')) %}
+          {% assign class = 'active' %}
+        {% endif %}
+
+        {% if menu.type == 'categories' %}
+          <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
+            <ul class="header-submenu">
+              {% for item in (0..site.categories.size) %}{% unless forloop.last %}
+                {% capture this_word %}{{ cats_list[item] | strip_newlines }}{% endcapture %}
+                  <li class="sub-item"><a href="{{site.url}}/categories/#{{this_word}}">{{this_word}}</a></li>
+              {% endunless %}{% endfor %}
+            </ul>
+          </li>
+        {% elsif menu.submenu %}
+          <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
+            <ul class="header-submenu">
+              {% for sub in menu.submenu %}
+                <li class="sub-item"><a href="{{site.url}}{{sub.url}}">{{sub.title}}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
+        {% else %}
+            {% if menu.url contains 'http://' or menu.url contains 'https://' %}
+                <li class="header-item {{class}}"><a href="{{menu.url}}" target="_blank"><h3>{{ menu.title }}</h3></a></li>
+            {% else %}
+                <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
+            {% endif %}
+        {% endif %}
+      {% endfor %}
+      <li class="header-item"><a href="{{site.url}}/search"><h3><i class="fa fa-search"></i></h3></a></li>
+    </ul>
+  </div>
+
+<nav id="menu" style="display: none">
+  <ul>
+    {% for menu in site.menu %}
+      {% if menu.type == 'categories' %}
+        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
+          <ul>
+            {% for item in (0..site.categories.size) %}{% unless forloop.last %}
+              {% capture this_word %}{{ cats_list[item] | strip_newlines }}{% endcapture %}
+                <li><a href="{{site.url}}/categories/#{{this_word}}">{{this_word}}</a></li>
+            {% endunless %}{% endfor %}
+          </ul>
+        </li>
+      {% elsif menu.submenu %}
+        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
+          <ul>
+            {% for sub in menu.submenu %}
+              <li><a href="{{site.url}}{{sub.url}}">{{sub.title}}</a></li>
+            {% endfor %}
+          </ul>
+        </li>
+      {% else %}
+        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
+      {% endif %}
     {% endfor %}
   </ul>
 </nav>
-{% else %}
-  {% include nav-default.html %}
+
+{% if site.owner.twitter %}
+  <a href="https://twitter.com/{{site.owner.twitter}}" class="btn btn-info button-twitter" data-show-count="false" data-size="large"><i class="fa fa-twitter"></i> <span> | Follow @{{site.owner.twitter}}</span></a>
 {% endif %}
