--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,14 @@
     <link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
 
 		{% include site-favicons.html %}
+		{% include head.html %}
 	</head>
 	<body class="layout-{{ page.layout }}  {{ page.title | slugify }}">
 		{% include site-icons.svg %}
+		{% include site-header.html %}
 
 		{{ content }}
 
+		{% include site-footer.html %}
 	</body>
 </html>
