--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,9 +32,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/css/jquery.mmenu.all.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/css/jquery.floating-social-share.min.css">
+<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/css/jquery.mmenu.all.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/css/jquery.floating-social-share.min.css" | relative_url }}">
 <!-- Webfonts -->
 <link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
 
