--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,9 +1,8 @@
 <footer class="footer">
   <div class="container">
     {% include nav-footer.html %}
-    
     <div class="copyright  typeset">
-      <small class="small">&copy; {{ site.title }} {{ site.time | date: '%Y' }}</small>
+      <small class="small">&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a href="http://github.com/tillbey/neo-alembic" rel="nofollow">Neo-Alembic Theme</a>.</small>
     </div>
   </div>
 </footer>
