--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,16 +32,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-<link rel="stylesheet" href="{{ "/assets/css/jquery.mmenu.all.css" | relative_url }}">
-<link rel="stylesheet" href="{{ "/assets/css/jquery.floating-social-share.min.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/styles/main.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/styles/jquery.mmenu.all.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/styles/jquery.floating-social-share.min.css" | relative_url }}">
 <!-- Webfonts -->
-<link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
 <meta http-equiv="cleartype" content="on">
 
 <!-- Load Modernizr -->
-<script type="text/javascript" src="{{ site.url }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}/assets/scripts/vendor/modernizr-2.6.2.custom.min.js"></script>
 
 {% include icons.html %}
 
