--- a/_includes/nav-categories.html
+++ b/_includes/nav-categories.html
@@ -7,3 +7,8 @@
     {% endfor %}
   </ul>
 </nav>
+
+
+{% if site.owner.twitter %}
+  <a href="https://twitter.com/{{site.owner.twitter}}" class="btn btn-info button-twitter" data-show-count="false" data-size="large"><i class="fa fa-twitter"></i> <span> | Follow @{{site.owner.twitter}}</span></a>
+{% endif %}
