--- a/_includes/site-search.html
+++ b/_includes/site-search.html
@@ -11,7 +11,7 @@
 
 <script type="text/javascript" src="{{ "/assets/scripts/fetch.js" | relative_url }}"></script>
 <script type="text/javascript">
-    const endpoint = '{{ "/assets/search.json" | relative_url }}';
+    const endpoint = '{{ "/assets/scripts/search.json" | relative_url }}';
 
     const pages = [];
 
