--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -2,9 +2,20 @@ body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	background-color: $body-color;
+	height: 100%;
+	background-color: $background-color;
+	color: $text-color;
+	display: flex;
+  @include flex-direction(column);
 	overflow-x: hidden;
 }
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 
 // Main
 // --------------------------------------------------
@@ -28,6 +39,173 @@ body {
 			border-bottom-style: solid;
 		}
 	}
+}
+
+// Main content
+.main {
+  @include flexbox;
+  @include flex-direction(column);
+	background-color: $base-color;
+  margin-top: 0rem;
+  margin-bottom: 1.6rem;
+  @include breakpoint(break-1) {
+    @include flex-direction(row);
+  }
+}
+
+.main {
+  @include flex(1, 0, auto);
+}
+
+.header,
+.feature,
+.footer {
+  @include flex(0, 0, auto);
+}
+
+.content {
+  width: 100%;
+  @include breakpoint(break-1) {
+    width: 62%;
+    margin-right: 4%;
+    &--full {
+      width: 100%;
+      margin-right: 0%;
+      .figure--full {
+        left: 50%;
+      }
+    }
+    &--aside-left {
+      margin-right: 0;
+      margin-left: 4%;
+      @include order(2);
+      .figure--full {
+        left: 19.4%;
+      }
+    }
+  }
+}
+
+.share {
+  .button {
+    margin-right: .3rem;
+  }
+}
+
+.aside {
+  max-width: 100%;
+  @include breakpoint(break-1) {
+    max-width: 34%;
+    @include flex(1, 0, auto);
+    opacity: 0.5;
+    transition: opacity .1s;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+.section {
+  margin: 0;
+  &--category-index {
+    position: fixed;
+    top: 0;
+  }
+}
+
+
+// Lists
+.list {
+  &--posts,
+  &--results {
+    list-style: none;
+  }
+  &--nav,
+  &--categories {
+    list-style: none;
+  }
+  .item--post {
+    margin-left: 0;
+  }
+  &--categories {
+    .item {
+      margin-left: 0;
+    }
+  }
+}
+
+.item {
+  &--nav {
+    display: inline-block;
+    margin-left: 1rem;
+    &:first-of-type {
+      margin-left: 0;
+    }
+  }
+  &--current {
+    a {
+      color: $focus-color;
+    }
+  }
+}
+
+
+// Links, icons and images
+.link {
+  display: inline-block;
+  margin: .2rem;
+  line-height: 1;
+  .icon {
+    display: inline-block;
+    transition: fill .1s;
+    &:hover {
+      fill: darken($link-color, 10%);
+    }
+  }
+}
+
+.icon {
+  vertical-align: middle;
+  width: 1.1em;
+  height: 1.1em;
+  fill: CurrentColor;
+}
+
+svg {
+  width: 100%;
+  height: 100%;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.figure {
+  line-height: 0;
+  &--full {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    margin-left: -50vw;
+    .caption {
+      padding-left: .8rem;
+      padding-right: .8rem;
+    }
+  }
+  @include breakpoint(break-1) {
+    &--full {
+      left: 80.6%;
+    }
+    &--left {
+      float: left;
+      padding-right: .8rem;
+    }
+    &--right {
+      float: right;
+      padding-left: .8rem;
+    }
+  }
 }
 
 ///sections
@@ -71,7 +249,7 @@ body {
 	max-width: 440px;
 	padding: 10px 15px;
 	background-color: rgba($base-color,0.5);
-	color: $white;
+	color: $base-color;
 	@include font-rem(12);
 	text-align: right;
 	@include border-radius(3px,0,0,3px);
@@ -138,7 +316,7 @@ header .entry-meta {
 	.entry-content {
 		margin: 40px 2px 20px 2px;
 		padding: 10px 15px;
-		background-color: $white;
+		background-color: $base-color;
 		box-shadow: 0 0 0 0, 0 6px 12px rgba($black,0.1);
 		@include rounded(3px);
 		@media #{$medium} {
@@ -158,7 +336,7 @@ header .entry-meta {
 	#disqus_thread {
 		margin: 40px 2px 20px 2px;
 		padding: 10px 15px;
-		background-color: $white;
+		background-color: $base-color;
 		box-shadow: 0 0 0 1px rgba($border-color,0.1), 0 6px 12px rgba($black,0.1);
 		@include rounded(3px);
 		@media #{$medium} {
@@ -219,7 +397,7 @@ header .entry-meta {
 	position: relative;
 	margin: 40px 2px 20px 2px;
 	padding: 40px 15px 25px;
-	background-color: $white;
+	background-color: $base-color;
 	box-shadow: 0 0 0 1px rgba($border-color,0.1), 0 6px 12px rgba($black,0.1);
 	@include rounded(3px);
 	@media #{$medium} {
@@ -359,7 +537,7 @@ ul.social-buttons li a:active {
 		}
 	}
 	article {
-		background-color: $white;
+		background-color: $base-color;
 		box-shadow: 0 0 0 0, 0 6px 12px rgba($base-color,0.1);
 		@include rounded(3px);
 		margin-bottom: 20px;
@@ -408,6 +586,12 @@ ul.social-buttons li a:active {
 	}
 }
 
+.copyright {
+  @include breakpoint(break-1) {
+    @include order(-1);
+  }
+}
+
 // Social Share
 // --------------------------------------------------
 .socialcount {
@@ -449,7 +633,7 @@ ul.social-buttons li a:active {
 	padding: 8px 20px;
 	display: inline-block;
 	@include font-rem(14);
-	background-color: $white;
+	background-color: $base-color;
 	color: $text-color;
 	border-width: 2px !important;
 	border-style: solid !important;
@@ -475,6 +659,24 @@ ul.social-buttons li a:active {
 		min-height: 300px;
 	}
 }
+
+.feature {
+	padding-top: 3rem;
+  padding-bottom: .4rem;
+  margin-bottom: 0rem;
+  text-align: center;
+  background: $accent-color;
+  background-size: cover;
+  background-position: center;
+  @include flexbox;
+  .container {
+    min-height: 35vh;
+    max-width: 60%;
+    @include flex-direction(column);
+    @include justify-content(center);
+  }
+}
+
 .header-toggle{
 	display: block;
 	@media #{$large} {
@@ -564,35 +766,45 @@ ul.social-buttons li a:active {
 	background-color: $menu-overflow;
 }
 
-.header-item,
-.header-item-title {
-	float: right;
-	padding-left: 20px;
-	padding-right: 20px;
-	border-top-color: transparent;
-	border-top-style: solid;
-	border-top-width: 5px;
-	box-sizing: border-box;
-
-	a {
-		vertical-align: middle;
-		display: table-cell;
-		height: $menu-height - 2;
-	}
+.nav {
+  &--paginator {
+    @include flexbox;
+    @include justify-content(space-between);
+    color: $caption-color;
+    text-align: center;
+  }
+  &--social {
+    text-align: left;
+  }
 }
+
 ///sections
 .logo{
   width: $menu-height;
   height: $menu-height;
   float: left;
-  padding: 10px;
+  padding: 2px;
 }
 .header-item-container{
 	height: 100%;
 }
+
 .header-item{
 	height: 100%;
 	display: none;
+	float: right;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-top-color: transparent;
+	border-top-style: solid;
+	border-top-width: 2px;
+	box-sizing: border-box;
+	a {
+		font-size: 1rem;
+		vertical-align: middle;
+		display: table-cell;
+		height: $menu-height - 2;
+	}
 	@media #{$large} {
 		display: block;
 	}
@@ -601,12 +813,14 @@ ul.social-buttons li a:active {
 	float: left;
 	border-top-width: 0px;
 	height: 100%;
-	a.title {
+	a {
+		vertical-align: middle;
+		display: table-cell;
+		height: $menu-height;
 		font-size: 1.5rem;
 	    padding-left: 5px;
+		font-weight: map-get($caption-font, bold);
 		display: none;
-		vertical-align: middle;
-		height: $menu-height - 2;
 		@media #{$medium}{
 			display: table-cell;
 		}
@@ -629,12 +843,12 @@ ul.social-buttons li a:active {
 	width: 200px;
 	z-index: 100;
 	list-style-type: none;
-	transform: translateX(-25%);
+  transform: translateX(-20px);
 }
 
 .sub-item {
 	position: relative;
-	padding-left: 10px;
+	padding-left: 20px;
 	width: 100%;
 	border-bottom: 1px solid gray;
 	border-left: 1px solid;
