--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,38 +1,61 @@
 // Typography
 // --------------------------------------------------
 
-$base-font: 'Lato', Calibri, Arial, sans-serif;
-$heading-font: $base-font;
-$caption-font: $base-font;
-$code-font: monospace;
+$base-font: (
+  font-family: 'Source Sans Pro',
+  regular: 400,
+  bold: 700,
+  italic: italic,
+  cap-height: 0.66
+) !default;
+
+$heading-font: (
+  font-family: 'Source Sans Pro',
+  regular: 400,
+  bold: 700,
+  cap-height: 0.66
+) !default;
+
+$caption-font: (
+  font-family: 'Source Sans Pro',
+  regular: 400,
+  bold: 700,
+  cap-height: 0.66
+) !default;
 $alt-font: serif;
+$code-font: (
+  font-family: 'Source Code Pro',
+  regular: 400,
+  cap-height: 0.68
+) !default;
 
 $doc-font-size: 16;
 $doc-line-height: 26;
 
-
-// set-up the body font-size / line-height
-body {
-	font-size: 0px + $doc-font-size;
-}
-
-
 // Colors
 // --------------------------------------------------
-$base-color				 : rgba(#222,0.8);
+$base-color				 : rgba(209, 227, 255, 0.7);
 $header-color			 : rgba(#000,0.8);
+$caption-color    : lighten($header-color, 50%);
 $sub-item-color			 : rgba(#000, 0.1);
 $header-margin			 : #F45145;
 $menu-top				 : white;
 $menu-height			 : 50px;
 $menu-overflow			 : #2E2E2E;
-$body-color      		 : #e8e8e8;
-$text-color      		 : rgba(#222,0.8);
+$body-color      		 : $base-color;
+$heading-color			 : #05bf85;
+$background-color		 : rgba(44, 130, 195, 0.7);
+$code-background-color: darken($background-color, 5%);
+$accent-color				 : #05bf85;
+$link-color 		     : rgba(#222,0.8);
+$hover-color				 : darken($link-color, 20);
+$visited-color			 : lighten($link-color, 20);
+$focus-color				 : desaturate($link-color, 100%);
+$text-color      		 : rgba(#000,0.8);
 $comp-color 	 		 : complement(#222);
 $border-color    		 : lighten(#222,60);
 $white           		 : #fff;
 $black           		 : #000;
-$link-color 		     : rgba(#222,0.8);
 
 $primary			     : #222;
 $success			     : #5cb85c;
@@ -47,3 +70,57 @@ $info				     : #308cbc;
 $small               : "only screen and (min-width: 30em)";
 $medium              : "only screen and (min-width: 48em)";
 $large               : "only screen and (min-width: 62.5em)";
+
+// SCSS variables
+// ---------------------------------------
+
+// Note: For the following Sass maps enter values as if they would be px units.
+
+// Breakpoint sizes from px to ems. Add more values here to add more breakpoints.
+// Change names if you prefer, it wont break the mixin as long as they are strings not just numbers.
+$breakpoints: (
+  break-0: 0,     // 0px       Mobile first
+  break-1: 640,   // 640px   ~ Small tablet up
+  break-2: 800,   // 800px   ~ Large tablet up
+  break-3: 1024,  // 1024px  ~ Desktop up
+  break-4: 1600   // 1600px  ~ Large desktop up
+) !default;
+
+// Root font-sizes for each breakpoint. Set to half desired line-height of body text.
+// ! Make sure to have as many sizes as breakpoints above.
+$rootsizes: (
+  rootsize-0: 12,   // 24px line-height body text
+  rootsize-1: 14,   // 28px line-height body text
+  rootsize-2: 15,   // 30px line-height body text
+  rootsize-3: 17,   // 34px line-height body text
+  rootsize-4: 19    // 38px line-height body text
+) !default;
+
+// Set the optimum line-length for your text (based on typeface).
+// Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
+// ! Make sure to have as many widths as breakpoints above.
+// Note: this was 'maxwidths' in previous versions.
+$measures: (
+  measure-0: 500,  // 500px wide
+  measure-1: 550,  // 550px wide
+  measure-2: 600,  // 600px wide
+  measure-3: 680,  // 680px wide
+  measure-4: 750   // 750px wide
+) !default;
+
+// Set the max-widths for containers (based on design).
+// ! Make sure to have as many widths as breakpoints above.
+$maxwidths: (
+  width-0: 500,  // 500px wide
+  width-1: 600,  // 600px wide
+  width-2: 800,  // 800px wide
+  width-3: 1100, // 110px wide
+  width-4: 1300  // 1300px wide
+) !default;
+
+// Gutter widths
+$gutterwidths: (
+  small: 1rem,
+  medium: 2rem,
+  large: 4rem
+) !default;
