--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -18,11 +18,14 @@ sitemap: false
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/magnific-popup/magnific-popup";
 @import "site";
+@import "modular-scale";
 @import "typography";
-@import "rouge";
+@import "syntax";
 @import "coderay";
 @import "grid";
 @import "elements";
 @import "animations";
 @import "dl-menu";
+@import "flex";
+@import "layouts";
 @import "page";
