page, post and excerpt as new styles, search uses excerpts

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -25,7 +25,7 @@
   {% endif %}
 
   {% unless page.layout == "categories" %}
-    {% include nav-social.html %}
+    {% include nav-share.html %}
   {% endunless %}
 
 </aside>
