--- a/_includes/nav-share.html
+++ b/_includes/nav-share.html
@@ -1,23 +1,16 @@
-<div class="share">
-  {% for network in site.sharing_links %}
-    {% assign name = network[0] %}
-    {% assign id = network[0] | downcase | remove: " " %}
-    {% assign url = site.url | append: page.url %}
-    {% assign color = network[1] %}
-
-    {% capture share_link %}
-      {% if id contains "twitter" %}https://twitter.com/intent/tweet/?url={{ url }}&text={{ page.title | uri_escape }}{% if site.twitter.username %}&via={{ site.twitter.username}}{% endif %}{% endif %}
-      {% if id contains "facebook" %}https://facebook.com/sharer/sharer.php?u={{ url }}{% endif %}
-      {% if id contains "google+" %}https://plus.google.com/share?url={{ url }}{% endif %}
-      {% if id contains "pinterest" %}https://pinterest.com/pin/create/button/?url={{ url }}&description={{ page.title }}&media={{ page.image }}{% endif %}
-      {% if id contains "linkedin" %}https://www.linkedin.com/shareArticle?url={{ url }}&title={{ page.title }}&source={{ site.title }}&summary={{ page.excerpt }}&mini=true{% endif %}
-      {% if id contains "tumblr" %}https://tumblr.com/widgets/share/tool?canonicalUrl={{ url }}&tags={{ page.category }}&caption={{ page.title }}{% endif %}
-      {% if id contains "reddit" %}https://reddit.com/submit?url={{ url }}&title={{ page.title }}&resubmit=true{% endif %}
-      {% if id contains "hackernews" %}https://news.ycombinator.com/submitlink?u={{ url }}&t={{ page.title }}{% endif %}
-      {% if id contains "designernews" %}https://www.designernews.co/submit?url={{ url }}&title={{ page.title }}{% endif %}
-      {% if id contains "email" %}mailto:?subject={{ page.title }}&body={{ url | prepend: "Hey, check out this: "}}{% endif %}
-    {% endcapture %}
-
-    {% include button.html text=name icon=id link=share_link color=color %}
+<nav class="nav  nav--social">
+  {% for link in site.social_links %}
+    {% assign id = link[0] | downcase %}
+    <a class="link" href="{{ link[1] }}" title="{{ link[0] }}">
+      {% include icon.html id=id title=id %}
+    </a>
   {% endfor %}
-</div>
+</nav>
+
+<div class="social-share">
+  <ul class="socialcount socialcount-small inline-list">
+    <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook"><span class="count"><i class="fa fa-facebook-square"></i> Like</span></a></li>
+    <li class="twitter"><a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}" title="Share on Twitter"><span class="count"><i class="fa fa-twitter-square"></i> Tweet</span></a></li>
+    <li class="googleplus"><a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google Plus"><span class="count"><i class="fa fa-google-plus-square"></i> +1</span></a></li>
+  </ul>
+</div><!-- /.social-share -->
