--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,16 +2,6 @@
 layout: default
 ---
 
-<main class="main  container">
-
-	<article class="article  article--page  content  typeset">
-
-    <h1>{{ page.title }}</h1>
-
-    {{ content }}
-
-  </article>
-
-  {% include site-aside.html %}
-
+<main>
+  {% include page.html %}
 </main>
